# node-fontnik

./: .clang-tidy  .gitignore  .gitmodules  .npmignore  .travis.yml  .travis.yml.txt  API.md  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV.md  LICENSE.txt  Makefile  README.md  TODO.md  api.js  binding.gyp  common.gypi  convert.js  decode.sh  fontnik.js  index.js  install_mason.sh  package-lock.json  package.json  server.js  test.js  tile.js  updateproto.sh
.circleci/: config.yml
.ebextensions/: 01_dependencies.config  02_updateproto.config
.github/actions/build-native/: action.yml
.github/workflows/: builds.yml  npm-release.yml  pr_trigger.yml
api/: api.js  metrics.js  shape.html  tile.js
bench/: bench.js  bench2.js
cache/: README.md
cloudformation/: ci.template.js
fonts/: fonts.conf
fonts/firasans-medium/: LICENSE
include/: glyphs.hpp
include/edtaa/: README.fontserver  edtaa4func.h
include/fontnik/: glyphs.hpp  guarded_map.hpp
include/fontserver/: font_set.hpp  glyphs.hpp  pixel_position.hpp  text_format.hpp  util.hpp
include/freetype-gl/: README.fontserver  distmap.h
include/freetype/config/: ftmodule.h
include/gzip/: README.md
include/harfbuzz/: config.h
include/mapbox/: SOURCE  glyph_foundry.hpp  glyph_foundry_impl.hpp
include/mapnik/: README.fontserver  face_set.hpp  font_engine_freetype.hpp  font_set.hpp  glyph_info.hpp  pixel_position.hpp
include/mapnik/text/: face.hpp  face_set.hpp  glyph_info.hpp
include/mapnik/util/: fs.hpp
include/node_fontnik/: glyphs.hpp
include/node_fontserver/: glyphs.hpp
include/node_mapnik/: mapnik_fonts.hpp
lib/: font.js  frequency.js  glyphcache.js  protobuf.js  shaping.js  test.js  vectortile.js
proto/: glyphs.proto  glyphset.proto  metrics.proto  shaping.proto  vector_tile.proto
scripts/: coverage.sh  generate_compile_commands.py  install-native.js  install.sh  install_deps.sh  install_mason.sh  install_node.sh  package-version.js  publish.sh  sanitize.sh  setup.sh  test.sh  travis_publish.sh
spec/: charfreq-china.js  charfreq-compare.js  charfreq-hangul.js  charfreq-test.js  charfreq.js  cjk-modern.json  cjk-osm.json  osm.json  ranges.js
spec/data/: charfreq-modern.csv
spec/expected/: china-osm.json  cjk-common.json  cjk-frequency.json  cjk-glyphs.json  cjk-osm.json  cjk-sorted.json  hangul-common.json  hangul-glyphs.json  hangul-osm.json  hong-kong-osm.json  japan-osm.json  korea-osm.json  macau-osm.json  north-korea-osm.json  sorted-osm.json  south-korea-osm.json  taiwan-osm.json
spec/fixtures/: 14.13345.7109.json  14.13346.7110.json  14.13487.6208.json  14.13718.6692.json  14.13718.6693.json  14.13719.6693.json
spec/fixtures/china/: 14.13345.7110.json  14.13346.7109.json  14.13486.6207.json  14.13486.6208.json  14.13487.6207.json  14.13719.6692.json
spec/fixtures/hong-kong/: 14.13387.7151.json  (+3 more)
src/: char_properties_ptr.hpp  clipper.cpp  clipper.hpp  distmap.c  distmap.h  edtaa4func.c  edtaa4func.h  face.cpp  face.hpp  face_set.cpp  face_set.hpp  font.cpp  font.hpp  font_engine_freetype.cpp  font_engine_freetype.hpp  font_face.cpp  font_face.hpp  font_face_set.cpp  font_face_set.hpp  font_set.cpp  font_set.hpp  fontserver.cpp  freetype_engine.cpp  freetype_engine.hpp  freetype_font.cpp  freetype_font.hpp  fs.cpp  fs.hpp  ft_font.cpp  ft_font.hpp  globals.cpp  globals.hpp  glyph_info.hpp  glyphs.cpp  glyphs.hpp  guarded_map.hpp  harfbuzz_glyph.cpp  harfbuzz_glyph.hpp  harfbuzz_shaper.cpp  harfbuzz_shaper.hpp  (+35 more)
src/agg/: agg_curves.cpp
src/edtaa/: edtaa4func.c
src/fontnik/: face.cpp  glyphs.cpp
src/fontserver/: glyphs.cpp
src/freetype-gl/: distmap.c
src/icu/: scrptrun.cpp  scrptrun.h
src/mapnik/: font_engine_freetype.cpp
src/text/: face.cpp
src/util/: distmap.c  edtaa4func.c  fs.cpp
test/: bin.test.js  composite.test.js  deflate.js  fontnik.test.js  load.test.js  magic.pbf  overflow-worker.js  overflow.test.js  range.test.js  segfault.js  shape.test.js  table.test.js  test.js
test/expected/: chars.json  getRange.json  load.json  range.json  serialize.json  shape.json  simplify.json
test/fixtures/: 0-255.pbf  arialunicode.512.767.pbf  league.512.767.pbf  league.opensans.arialunicode.512.767.pbf  mapbox-streets-v4.13.1306.3163.vector.pbf  mapbox-streets-v4.13.2412.3078.vector.pbf  opensans.arialunicode.512.767.pbf  range.0.256.pbf
test/format/: glyphs.js
(+28 files in other folders)
